# cmake_demo

./: CMakeLists.txt  run_cmake.sh
Source/exe/: main.c
Source/libA/: libA.c  libA.h
Source/libB/: libB.c  libB.h
